# ray-tracing

./: .gitignore  CMakeLists.txt  README.md  renderAllScenes.sh
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  mingw64.cmake  version.cmake  version.h.in
data/: 9spheres.json  GoTScene.json  atalante.json  atalanteObj.json  atalanteStl.json  atalanteStlDisco.json  ballOnFloorScene.json  emptyScene.json  glassStrawScene.json  meshCube.json  meshMonkey.json  meshScene.json  phongReflexionScene.json  polygonScene.json  refractionCylinderScene.json  refractionScene.json  simpleScene.json  singleWallScene.json  tableScene.json  testScene.json  transparentShadow.json
images/: .placeholder.txt
include/: AmbiantLight.hh  BitmapWriter.hh  BoundingVolume.hh  Camera.hh  ClosedCylinder.hh  Cube.hh  Cylinder.hh  DeprecatedItem.hh  DeprecatedLightSource.hh  Frame3.hh  Geometry.hh  InputHandler.hh  Item.hh  LightRay.hh  LightSource.hh  Material.hh  Mesh.hh  MotionLoader.hh  PerformanceTracker.hh  Pixel.hh  Plane.hh  Polygon.hh  Renderer.hh  Scene.hh  SceneLoader.hh  Sphere.hh  StringException.hh  Vector3.hh  Window.hh  dataStructures.hh  scenarios.hh  utils.hh
include/geometries/: BoundingPolyhedron.hh  BoundingSphere.hh  ClosedCylinder.hh  Cube.hh  Cylinder.hh  Geometry.hh  HierarchyBoundingVolume.hh  Mesh.hh  Plane.hh  Polygon.hh  Sphere.hh
include/textures/: CheckerBoard.hh  DiscoBoard.hh  Image.hh  SolidColor.hh  Texture.hh
src/: AmbiantLight.cc  BitmapWriter.cc  BoundingVolume.cc  Camera.cc  ClosedCylinder.cc  Cube.cc  Cylinder.cc  DeprecatedLightSource.cc  DeprecatedSphere.cc  Frame3.cc  Geometry.cc  InputHandler.cc  Item.cc  LightRay.cc  LightSource.cc  Material.cc  Mesh.cc  MotionLoader.cc  PerformanceTracker.cc  Pixel.cc  Plane.cc  Polygon.cc  Renderer.cc  Scene.cc  SceneLoader.cc  Sphere.cc  Vector3.cc  Window.cc  main.cc  mainDiscoTransitionVideo.cc  mainDiscoVideo.cc  mainFromJson.cc  mainMotion.cc  mainRobotVideo.cc  mainVideo.cc  utils.cc
src/geometries/: BoundingPolyhedron.cc  BoundingSphere.cc  ClosedCylinder.cc  Cube.cc  Cylinder.cc  Geometry.cc  HierarchyBoundingVolume.cc  Mesh.cc  Plane.cc  Polygon.cc  Sphere.cc
src/textures/: CheckerBoard.cc  DiscoBoard.cc  Image.cc  SolidColor.cc  Texture.cc
unit/: CMakeLists.txt  CameraTests.cc  CylinderTest.cc  FrameTests.cc  MeshTests.cc  PlaneTest.cc  SceneLoaderTest.cc  SphereTests.cc  TableTest.cc  VectorTests.cc  WindowTest.cc  multipleLightSourceTest.cc  rapidJsonTest.cc  stlReaderTest.cc  visu1SphereTest.cc  visu9SpheresTest.cc  visualisationTest.cc
unit/data/: cylinderTest.json
